#########################################################################
#									#
# Script ID: src/prg/java/src/jarobjects/Makefile.am			#
# Author: Copyright (C) 2020  Mark Grant				#
#									#
# Released under the GPLv3 or later.					#
# SPDX-License-Identifier: GPL-3.0-or-later				#
#									#
# Purpose:								#
# AutoMake script file to maintain objects to be added to the jar file.	#
#									#
#########################################################################

#########################################################################
#									#
# Changelog								#
#									#
# Date		Author	Version	Description				#
#									#
# 23/01/2020	MG	1.0.1	Script created.				#
#									#
#########################################################################


noinst_DATA = AlarmClock.png AlarmClock.wav AlarmClockAbout.txt


EXTRA_DIST = $(srcdir)/AlarmClock.png $(srcdir)/AlarmClock.wav \
	$(srcdir)/AlarmClockAbout.txt


CLEANFILES = *.tmp AlarmClock.png AlarmClock.wav AlarmClockAbout.txt

